1. Collection API Улучшения[#248253]