@@ -12,8 +12,8 @@ import static org.junit.Assert.assertThat;
 public class DepartmentsTest {
     @Test
     public void whenMissed() {
-	List<String> input = Arrays.asList("k1/sk1");
-	List<String> expect = Arrays.asList("k1", "k1/sk1");
+	List<String> input = List.of("k1/sk1");
+	List<String> expect = List.of("k1", "k1/sk1");
 	List<String> result = Departments.fillGaps(input);
 	Departments.sortAsc(result);
 	assertThat(result, is(expect));
@@ -21,8 +21,8 @@ public class DepartmentsTest {
 
     @Test
     public void whenNonChange() {
-	List<String> input = Arrays.asList("k1", "k1/sk1");
-	List<String> expect = Arrays.asList("k1", "k1/sk1");
+	List<String> input = List.of("k1", "k1/sk1");
+	List<String> expect = List.of("k1", "k1/sk1");
 	List<String> result = Departments.fillGaps(input);
 	Collections.sort(result);
 	assertThat(result, is(expect));
@@ -30,14 +30,14 @@ public class DepartmentsTest {
 
     @Test
     public void manyRecords() {
-	List<String> input = Arrays.asList("K1/SK1",
+	List<String> input = List.of("K1/SK1",
 		"K1/SK2",
 		"K1/SK1/SSK1",
 		"K1/SK1/SSK2",
 		"K2",
 		"K2/SK1/SSK1",
 		"K2/SK1/SSK2");
-	List<String> expect = Arrays.asList("K1",
+	List<String> expect = List.of("K1",
 		"K1/SK1",
 		"K1/SK1/SSK1",
 		"K1/SK1/SSK2",
@@ -46,9 +46,6 @@ public class DepartmentsTest {
 		"K2/SK1",
 		"K2/SK1/SSK1",
 		"K2/SK1/SSK2");
-	for (int c = 0; c < expect.size(); c++) {
-	    expect.set(c, expect.get(c).toLowerCase());
-	}
 	List<String> result = Departments.fillGaps(input);
 	Departments.sortAsc(result);
 	assertThat(result, is(expect));
@@ -66,7 +63,7 @@ public class DepartmentsTest {
 		"K1/SK1/SSK2",
 		"K2",
 		"K2/SK1/SSK2");
-	List<String> expected = Arrays.asList("K2",
+	List<String> expected = List.of("K2",
 		"K2/SK1",
 		"K2/SK1/SSK1",
 		"K2/SK1/SSK2",
