@@ -13,33 +13,33 @@ public class NotifyAccountTest {
 
     @Test
     public void sent() {
-        List<Account> accounts = Arrays.asList(
-                new Account("123", "Petr Arsentev", "eDer3432f"),
-                new Account("142", "Petr Arsentev", "000001")
-        );
-        HashSet<Account> expect = new HashSet<>(
-                Arrays.asList(
-                        new Account("123", "Petr Arsentev", "eDer3432f"),
-                        new Account("142", "Petr Arsentev", "000001")
-                )
-        );
-        assertThat(NotifyAccount.sent(accounts), is(expect));
+	List<Account> accounts = List.of(
+		new Account("123", "Petr Arsentev", "eDer3432f"),
+		new Account("142", "Petr Arsentev", "000001")
+	);
+	HashSet<Account> expect = new HashSet<>(
+		List.of(
+			new Account("123", "Petr Arsentev", "eDer3432f"),
+			new Account("142", "Petr Arsentev", "000001")
+		)
+	);
+	assertThat(NotifyAccount.sent(accounts), is(expect));
     }
 
     @Test
     public void sentWithCopies() {
-        List<Account> accounts = Arrays.asList(
-                new Account("123", "Petr Arsentev", "eDer3432f"),
-                new Account("142", "Petr Arsentev", "000001"),
-                new Account("142", "Petr Gg", "666"),
-                new Account("142", "Petr Uuh", "000")
-        );
-        HashSet<Account> expect = new HashSet<>(
-                Arrays.asList(
-                        new Account("123", "Petr Arsentev", "eDer3432f"),
-                        new Account("142", "Petr Arsentev", "000001")
-                )
-        );
-        assertThat(NotifyAccount.sent(accounts), is(expect));
+	List<Account> accounts = List.of(
+		new Account("123", "Petr Arsentev", "eDer3432f"),
+		new Account("142", "Petr Arsentev", "000001"),
+		new Account("142", "Petr Gg", "666"),
+		new Account("142", "Petr Uuh", "000")
+	);
+	HashSet<Account> expect = new HashSet<>(
+		List.of(
+			new Account("123", "Petr Arsentev", "eDer3432f"),
+			new Account("142", "Petr Arsentev", "000001")
+		)
+	);
+	assertThat(NotifyAccount.sent(accounts), is(expect));
     }
 }
